# octorules-cloudflare

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
docs/: permissions.md  schemas.md
docs/lint/: README.md  stage1-yaml-structure.md  stage2-per-rule.md  stage2b-custom-rulesets.md  stage2b-page-shield.md  stage2d-lists.md  stage3-plan-tier.md  stage4-cross-rule.md
examples/: config.yaml
examples/rules/: example-account.yaml  example.com.yaml
octorules_cloudflare/: __init__.py  _bot_management.py  _content_scanning.py  _leaked_credentials.py  _settings_base.py  _settings_common.py  _url_normalization.py  _zone_security.py  audit.py  exceptions.py  page_shield.py  provider.py
octorules_cloudflare/linter/: __init__.py  _constants.py  _plugin.py  _rules.py  action_validator.py  ast_linter.py  cross_rule_linter.py  custom_ruleset_linter.py  expression_bridge.py  list_linter.py  page_shield_linter.py  phase_linter.py  plan_linter.py  yaml_validator.py
octorules_cloudflare/linter/schemas/: __init__.py  _registry.py  actions.py  fields.py  functions.py  overlay.toml  schemas.json
scripts/: sync_schemas.py
scripts/hooks/: pre-commit
tests/: conftest.py  mocks.py  test_audit.py  test_bot_management.py  test_cli_lint.py  test_cli_page_shield.py  test_content_scanning.py  test_dumper_page_shield.py  test_formatter_page_shield.py  test_leaked_credentials.py  test_phases.py  test_planner_page_shield.py  test_provider.py  test_provider_custom_rulesets.py  test_provider_lists.py  test_provider_page_shield.py  test_registration.py  test_settings_base.py  test_settings_common.py  test_url_normalization.py  test_zone_security.py
tests/test_linter/: conftest.py  test_action_validator.py  test_ast_linter.py  test_cross_rule_linter.py  test_custom_ruleset_linter.py  test_engine_integration.py  test_expression_bridge.py  test_list_linter.py  test_page_shield_linter.py  test_phase_linter.py  test_pipeline.py  test_plan_linter.py  test_plugin.py  test_registry.py  test_yaml_validator.py
