[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "octorules-cloudflare"
version = "0.12.0"
description = "Cloudflare provider for octorules"
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Martin Simon" },
    { name = "Doctena S.A." },
]
keywords = ["cloudflare", "rules", "iac", "octorules"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "octorules>=0.27.0",
    "cloudflare>=5.4,<6.0",
    "octorules-wirefilter>=0.5.0,<1.0",
]

[project.optional-dependencies]
# Deprecated: octorules-wirefilter is now a base dependency. This empty extra is
# kept so existing `octorules-cloudflare[wirefilter]` installs keep working.
wirefilter = []
dev = [
    "pytest>=7.0",
    "pre-commit>=3.5",
    "build",
]

[project.urls]
Homepage = "https://github.com/doctena-org/octorules-cloudflare"
Repository = "https://github.com/doctena-org/octorules-cloudflare"
Issues = "https://github.com/doctena-org/octorules-cloudflare/issues"

[project.entry-points."octorules.providers"]
cloudflare = "octorules_cloudflare:CloudflareProvider"

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
"octorules_cloudflare.linter.schemas" = ["overlay.toml"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests use intentional unicode chars and regex metacharacters in match= patterns.
"tests/*" = ["RUF002", "RUF043"]

[tool.pytest.ini_options]
testpaths = ["tests"]
